# Beyond-Brute-Force-Heuristics-for-MWT

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  aggregate_results.py  draw_DTvsSA_Result.py  draw_results.py  generate_test_datasets.py  plot_all_datasets.py  run_all_tests.py  run_all_tests_parallel.py  run_all_tests_parallel3.py  run_all_tests_skip_completed.py  stddev_analysis.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
BruteForce/: BruteForce  Coordinate.h  bruteForceDataset.txt  load_coordinates.cpp  main.cpp  mwt_output.csv
DT_CES_SA/: .gitignore  CMakeLists.txt  DT_CES_SA_output_bruteForceDataset.csv  DT_CES_SA_pts_edges  DT_ONLY  analyse_results.py  analysis_summary.csv  benchmark_results.csv  compare_triangulations_output_bruteForceDataset.csv  generate_datasets_DT_SA_focus.py  generate_mwt_datasets.py  generate_test_datasets.py  plot_results.py  run_tests.py
DT_CES_SA/datasets/adv_noise/: adv_noise_1000.txt  adv_noise_3000.txt  adv_noise_50.txt  adv_noise_500.txt
DT_CES_SA/datasets/adversarial/: adversarial_200.txt  adversarial_3000.txt  adversarial_50.txt
DT_CES_SA/datasets/annulus/: annulus_1000.txt  annulus_50.txt  annulus_500.txt
DT_CES_SA/datasets/circle/: circle_200.txt  circle_3000.txt  circle_50.txt  circle_500.txt
DT_CES_SA/datasets/clusters/: clusters_1000.txt  clusters_200.txt  clusters_50.txt  clusters_500.txt
DT_CES_SA/datasets/grid/: grid_200.txt  grid_3000.txt  grid_500.txt
DT_CES_SA/datasets/poisson/: poisson_1000.txt  poisson_200.txt  poisson_3000.txt  poisson_50.txt  poisson_500.txt
DT_CES_SA/datasets/uniform/: uniform_1000.txt  uniform_200.txt  uniform_3000.txt
DT_CES_SA/include/: CandidateEdgeFilter.h  DelaunayWrapper.h  EdgeKey.h  FlipCriteria.h  GraphState.h  SimpleDelaunay.h  SimulatedAnnealing.h  load_coordinates.h
DT_CES_SA/src/: CandidateEdgeFilter.cpp  DelaunayWrapper.cpp  FlipCriteria.cpp  GraphState.cpp  SimulatedAnnealing.cpp  load_coordinates.cpp  main.cpp
DT_CES_SA/test_datasets/: 50RandomPts.txt  basicParseTest.txt
DT_CES_SA_STD_Deviation_Datasets/adv_noise/: adv_noise_200.txt
DT_CES_SA_STD_Deviation_Datasets/adversarial/: adversarial_1000.txt  adversarial_500.txt
DT_CES_SA_STD_Deviation_Datasets/annulus/: annulus_200.txt  annulus_3000.txt
DT_CES_SA_STD_Deviation_Datasets/circle/: circle_1000.txt
DT_CES_SA_STD_Deviation_Datasets/clusters/: clusters_3000.txt
DT_CES_SA_STD_Deviation_Datasets/grid/: grid_1000.txt  grid_50.txt
DT_CES_SA_STD_Deviation_Datasets/uniform/: uniform_50.txt  uniform_500.txt
FAILEDBruteForce/: FailedBruteForce
MST_Polygonisation/: CMakeCache.txt  CMakeLists.txt  MST_Polygonisation  Makefile  cmake_install.cmake  main.cpp
MST_Polygonisation/final_test_datasets/convex/: convex_2000.txt  convex_50.txt  convex_500.txt
MST_Polygonisation/final_test_datasets/fractal/: fractal_1000.txt  fractal_2000.txt  fractal_25.txt
MST_Polygonisation/final_test_datasets/gaussian/: gaussian_200.txt  gaussian_50.txt
MST_Polygonisation/final_test_datasets/hierarchical/: hierarchical_1000.txt  hierarchical_500.txt
MST_Polygonisation/final_test_datasets/latin_hypercube/: latin_hypercube_200.txt  latin_hypercube_50.txt
MST_Polygonisation/final_test_datasets/line_noise/: line_noise_1000.txt  line_noise_25.txt  line_noise_3000.txt
MST_Polygonisation/final_test_datasets/near_convex/: near_convex_1000.txt  near_convex_50.txt  near_convex_500.txt
MST_Polygonisation/final_test_datasets/rings/: rings_3000.txt  rings_50.txt
MST_Polygonisation/final_test_datasets/spiral/: spiral_3000.txt  spiral_50.txt
MST_Polygonisation/final_test_datasets/zigzag/: zigzag_1000.txt  zigzag_2000.txt  zigzag_50.txt
MST_Polygonisation/include/: AdjListGraph.h  Coordinate.h  FaceFinder.h  GrahamScan.h  PointHash.h  PointNodeHasher.h  PolygonalMWT.h
MST_Polygonisation/includes/: AdjListGraph.h  FaceFinder.h  GrahamScan.h  Point.h  PointNodeHasher.h  PolygonalMWT.h
MST_Polygonisation/src/: main.cpp
MST_Polygonisation/test_datasets/: clustered_200_points.txt  fractal_200.txt  fractal_500.txt  spiral_1000.txt
circle/: Ci_10K_I.pnt
distanceOrderedGreedy/: CMakeCache.txt  CMakeLists.txt  DT_CES_SA  Makefile  cmake_install.cmake  distanceOrderedGreedy  geometry.cpp  geometry.hpp  hull.cpp  hull.hpp  main.cpp  triangulate.cpp  triangulate.hpp
distanceOrderedGreedy/include/: geometry.h  hull.h  triangulate.h
distanceOrderedGreedy/src/: geometry.cpp  hull.cpp  load_coordinates.cpp  main.cpp  triangulate.cpp
exampleOutputsFromAlgosOnTestDatasets/: DT_CES_SA_spiral_200.pnt_generated_triangulation.csv
final_test_datasets/circle/: Ci_100K_D.pnt  Ci_100K_I.pnt  Ci_10K_D.pnt
final_test_datasets/clusters/: C_100K_D.pnt  C_100K_I.pnt  C_10K_D.pnt  C_10K_I.pnt
final_test_datasets/convex/: convex_1k.pnt  convex_200.txt  convex_25.txt  convex_3k.pnt
final_test_datasets/forces-in-sheet-metal-plate/: EM_46625_F.pnt
final_test_datasets/fractal/: fractal_1k.pnt  fractal_200.pnt  fractal_25.pnt  fractal_2k.pnt  fractal_3000.txt  fractal_3k.pnt  fractal_50.pnt  fractal_50.txt  fractal_500.pnt
final_test_datasets/gaussian/: gaussian_1000.txt  gaussian_100K_D.pnt  gaussian_100K_I.pnt  gaussian_10K_D.pnt  gaussian_10K_I.pnt  gaussian_1k.pnt  gaussian_200.pnt  gaussian_2000.txt  gaussian_25.pnt  gaussian_25.txt  gaussian_2k.pnt  gaussian_3000.txt  gaussian_3k.pnt  gaussian_50.pnt  gaussian_500.pnt  gaussian_500.txt
final_test_datasets/grid/: grid_100K_D.pnt  grid_100K_I.pnt  grid_10K_D.pnt  grid_10K_I.pnt
final_test_datasets/hierarchical/: hierarchical_1k.pnt  hierarchical_200.pnt  hierarchical_200.txt  hierarchical_2000.txt  hierarchical_25.pnt  hierarchical_25.txt  hierarchical_2k.pnt  hierarchical_3000.txt  hierarchical_3k.pnt  hierarchical_50.pnt  hierarchical_50.txt  hierarchical_500.pnt
final_test_datasets/irregular_triangular_network_representing_terrain/: GIS_4897_F.pnt
final_test_datasets/latin_hypercube/: latin_hypercube_1000.txt  latin_hypercube_1k.pnt  (+10 more)
results/: BruteForce_cookedasHELL.csv
rings/: rings_200.pnt  rings_50.pnt  rings_500.pnt
(+114 files in other folders)
